POM improvements.