@@ -17,6 +17,95 @@
 		<version>1.0.0.M3-SNAPSHOT</version>
 	</parent>
 	
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.8.1</version>
+					<configuration>
+						<argLine>-Duser.language=en -Duser.region=US -XX:PermSize=256m -XX:MaxPermSize=256m -XX:MaxHeapSize=512m</argLine>
+						<systemProperties>
+							<property>
+								<name>log4j.configuration</name>
+								<value>META-INF/log4j.xml</value>
+							</property>
+						</systemProperties>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-failsafe-plugin</artifactId>
+					<version>2.8.1</version>
+					<configuration>
+						<argLine>-Duser.language=en -Duser.region=US -XX:PermSize=256m -XX:MaxPermSize=256m -XX:MaxHeapSize=512m</argLine>
+						<systemProperties>
+							<property>
+								<name>log4j.configuration</name>
+								<value>META-INF/log4j.xml</value>
+							</property>
+						</systemProperties>
+					</configuration>
+					<executions>
+						<execution>
+							<id>integration-test</id>
+							<goals>
+								<goal>integration-test</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>verify</id>
+							<goals>
+								<goal>verify</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.mortbay.jetty</groupId>
+					<artifactId>jetty-maven-plugin</artifactId>
+					<version>${jetty.version}</version>
+					<dependencies>
+						<dependency>
+							<groupId>org.mortbay.jetty</groupId>
+							<artifactId>servlet-api</artifactId>
+							<version>${servlet.version}</version>
+						</dependency>
+					</dependencies>
+					<executions>
+						<execution>
+							<id>start-jetty</id>
+							<phase>pre-integration-test</phase>
+							<goals>
+								<goal>run</goal>
+							</goals>
+							<configuration>
+								<connectors>
+									<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+										<port>9090</port>
+									</connector>
+								</connectors>
+								<daemon>true</daemon>
+							</configuration>
+						</execution>
+						<execution>
+							<id>stop-jetty</id>
+							<phase>post-integration-test</phase>
+							<goals>
+								<goal>stop</goal>
+							</goals>
+							<configuration>
+			                    <stopPort>9089</stopPort>
+			                    <stopKey>jetty</stopKey>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>			
+			</plugins>
+		</pluginManagement>
+	</build>
+	
 	<modules>
 		<module>ajax</module>
 		<module>atmosphere</module>
